# hopeflow-toolbox

./: .gitignore  HopeFlow  HopeFlow-Installer.bat  INSTALL-WINDOWS.md  README.md  illustrator-plugin  install.bat  install.sh  models.json  package-lock.json  package.json  tsconfig.json
CSXS/: manifest.xml
ai-engine/: requirements-realesrgan.txt  requirements.txt
ai-engine/src/: server.py
docs/reference/: illustrator-menu-commands.csv  illustrator-menu-commands.json  illustrator-menu-commands.md
docs/reference/illustrator-reference/: README.md  menu-commands-v30.csv  menu-commands-v30.json  menu-commands-v30.md  metadata.json  select-tools-v30.csv  select-tools-v30.json  select-tools-v30.md
src/: globals.d.ts  version.ts
src/bridge/: cep-bridge.ts  index.ts  types.ts  uxp-bridge.ts
src/lib/nesting/: geometry.ts  nesting-engine.ts
src/panel/: App.tsx  dev-config.ts  index.html  index.tsx
src/panel/components/: AIEnhance.tsx  AlignmentGrid.tsx  ArtboardSizeTableExport.tsx  CategoryNav.tsx  ColorSeparatorPanel.tsx  DataMerge.tsx  ErrorBoundary.tsx  Icon.tsx  LargeScaleExport.tsx  MaterialLibrary.tsx  OpenPDF.tsx  PositionGrid.tsx  ScriptCard.tsx  ScriptManager.tsx  SearchBar.tsx  Settings.tsx  SplitOverlapArtboards.tsx  SuccessButton.tsx  TextStyleRules.tsx  index.ts
src/panel/hooks/: index.ts  useScriptRunner.ts  useSettings.ts  (+1 more)
src/registry/: categories.ts  script-manifest.ts
tools/: windows-installer.ps1
tools/graphic-relief-native/: CMakeLists.txt  README.md  graphic_relief_bench.cpp  graphic_relief_bench.js  graphic_relief_native.cpp
(+142 files in other folders)
